--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <h2>🪨 L'art Préhistorique</h2>
         <h3>-3 000 000 à -3500</h3>
         <p>Les premières manifestations artistiques humaines.</p>
-        <button class="btn-style" onclick="window.location.href='L'art préhistorique.html';">
+        <button class="btn-style" onclick="window.location.href='lart_prehistorique.html';">
           Notes de cours sur l'art préhistorique
         </button>
       </div>
@@ -253,3 +253,4 @@
   </script>
 </body>
 </html>
+
