--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <h2>🏺 Art Antique</h2>
         <h3>-3500 à 476</h3>
         <p>Art égyptien, mésopotamien, grec et romain. Développement de l'architecture monumentale, de la sculpture et des arts décoratifs.</p>
-        <button class="btn-style" onclick="window.location.href='L'art de l'antiquité.html';">
+        <button class="btn-style" onclick="window.location.href='lart_antique.html';">
           Notes de cours sur l'art Antique
         </button>
       </div>
@@ -253,4 +253,5 @@
   </script>
 </body>
 </html>
+
 
