--- a/L_art_egypte.html
+++ b/L_art_egypte.html
@@ -340,11 +340,11 @@
       <li>L’art est avant tout religieux, non réaliste.</li>
       <li>Les dieux combinent formes humaines et animales (symboles de puissance).</li>
     </ul>
-<h2> L<architecture </h2>
-<li> Les égyptiens étaient surtourt reconnus pour leurs nombreuses inovations dans le domaine de l'architecture:</li>
-<li>Les pyramides - tombeaux monumentaux des pharaons. Leur mode de construction reste encore mystérieux aujour d'hui.</li>
-<li>Les temples</li>
-<li>Les tombes creusées dans la vallée des rois et dans la vallée des reines, décorées de peintures et de hiéroglyphes.</li>
+<h2> L'architecture </h2>
+<li> <p>Les égyptiens étaient surtourt reconnus pour leurs nombreuses inovations dans le domaine de l'architecture:</p></li>
+<li><p>Les pyramides - tombeaux monumentaux des pharaons. Leur mode de construction reste encore mystérieux aujour d'hui.</p></li>
+<li><p>Les temples</p></li>
+<li><p>Les tombes creusées dans la vallée des rois et dans la vallée des reines, décorées de peintures et de hiéroglyphes.</p></li>
   </div>
 
   <footer>
