--- a/L_art_egypte.html
+++ b/L_art_egypte.html
@@ -6,12 +6,63 @@
   <title>L’art de l’Égypte ancienne</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
-      margin: 0;
-      padding: 20px;
-      background: linear-gradient(to right, #fdf6e3, #f5e6cc);
-      color: #333;
-      overflow-x: hidden;
+     body {
+      font-family: "Verdana", sans-serif;
+      margin: 40px auto;
+      max-width: 900px;
+      background: #fdf6e3; 
+      color: #3e2723;
+      line-height: 1.8;
+      font-size: 1.1em;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.4em;
+      color: #5d4037;
+      margin-bottom: 25px;
+    }
+
+    h2 {
+      font-size: 1.6em;
+      color: #8d6e63;
+      margin-top: 25px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #a1887f;
+      display: inline-block;
+      padding-bottom: 3px;
+    }
+
+    p {
+      margin: 8px 0;
+    }
+
+    ul {
+      margin: 5px 0 15px 25px;
+    }
+
+    strong {
+      color: #8b0000;
+    }
+
+    em {
+      color: #8d6e63;
+      font-style: italic;
+    }
+
+       .surligne-ocre {
+      background-color: #ffecb3;
+      font-weight: bold;
+    }
+
+    .surligne-orange {
+      background-color: #ffcc80;
+      font-weight: bold;
+    }
+
+    .surligne-brun {
+      background-color: #bcaaa4;
+      font-weight: bold;
     }
 
     header h1 {
