--- a/L_art_grece.html
+++ b/L_art_grece.html
@@ -14,16 +14,65 @@
   }
 
   body {
-    margin: 0;
-    font-family: Georgia, "Times New Roman", serif;
-    background: var(--bg);
-    color: var(--text);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 40px;
-  }
- 
+   body {
+      font-family: "Verdana", sans-serif;
+      margin: 40px auto;
+      max-width: 900px;
+      background: #fdf6e3; 
+      color: #3e2723;
+      line-height: 1.8;
+      font-size: 1.1em;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.4em;
+      color: #5d4037;
+      margin-bottom: 25px;
+    }
+
+    h2 {
+      font-size: 1.6em;
+      color: #8d6e63;
+      margin-top: 25px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #a1887f;
+      display: inline-block;
+      padding-bottom: 3px;
+    }
+
+    p {
+      margin: 8px 0;
+    }
+
+    ul {
+      margin: 5px 0 15px 25px;
+    }
+
+    strong {
+      color: #8b0000;
+    }
+
+    em {
+      color: #8d6e63;
+      font-style: italic;
+    }
+
+       .surligne-ocre {
+      background-color: #ffecb3;
+      font-weight: bold;
+    }
+
+    .surligne-orange {
+      background-color: #ffcc80;
+      font-weight: bold;
+    }
+
+    .surligne-brun {
+      background-color: #bcaaa4;
+      font-weight: bold;
+    }
+
  header h1 {
       text-align: center;
       font-size: 2.8em;
@@ -46,7 +95,8 @@
   }
 
   .container {
-    display: flex;
+text-align: center;
+ display: flex;
     gap: 40px;
     width: 100%;
     max-width: 900px;
@@ -105,8 +155,8 @@
 </head>
 <body>
 <header>
-<h1>L'art de la grèce antique</h1> </header>
-<div><p>L'antiquité grecque se sépare en trois grandes périodes : de -800 à -480 la période archaïque, de -480 à -323 la période classique et de -323 à -31 la période héllénistique.</p>
+<h1>L'art de la grèce antique</h1>
+<div><p>L'antiquité grecque se sépare en trois grandes périodes : de -800 à -480 la période archaïque, de -480 à -323 la période classique et de -323 à -31 la période héllénistique.</p> </header>
  </div>
  <div class="notes">
  <h2> Légende de la mytologie grecque</h2> 
@@ -224,7 +274,36 @@ Mais Zeus, craignant leur arrogance, priva les hommes du feu. Prométhée, compa
   </div>
 </div>
 <h2> Le style archaïque </h2>
-<li> <p> La période archaïque se définit par un éloignement du style égyptien. Les statues ne sont pas encore a leur appogés, on les nommes Kouros (homme) et korè (femme).
+<li> <p> La période archaïque se définit par un éloignement du style égyptien. Les statues ne sont pas encore a leur appogés, on les nommes Kouros (homme) et korè (femme).</li>
+
+<h2>Le style classique</h2>
+<li> <p> Le style classique est characterisé par la philosophie de l'idéal et de la beautée. Les grecques recherches l'armonie, la symétrie et la mesure. Ce sont les philosophes (Socrate, Platon, Aristote) qui étudient cette philosophie et concluent que ce qui est beau est bien et vrai. Les contrapostos (position de déhanchement, poid sur une jambes, désaxement des épaules) devient la position de choix des statues.
+</li>
+<p> Selon Aristote: </p>
+<p>L'art est une imitation du réel, il faut donc qu'il soit vraisemblable: il doit y avoir un écart par rapport au réel par l'ajout d'invention et faire mieu que le réel par le biait de l'idéalisation. <stong>C'est de là que vient le canon grec.</strong></p>
+<h2> Le canon grec </h2> 
+<li><p> Ensemble de regles pour representer le corps humain ideal avec des mesures et des calculs (exempls: 7 tetes dans le corps humain ainsi que le principe de la symetrie du corps humain</p> </li>
+<h2>Le style héllénistique</h2>
+<li>Durant cette période, les artisants deviennent une catégorie sociale à part entière. Les représentations de divinités grecques par exemple, deiennent plus expressives et naturalistes. Les statues montre des émotions fortes comme la souffrance ainsi que beaucoup plus de mouvements dans les tissus. De ce fait, une plus grande diversité de représentation surgit: il n'y a plus que de dieux parfait mais aussi des enfants et des personnes âgées.</li>
+<h2> L'architecture </h2>
+<li> Surtout religieuse, toujours en recherche de proportion et de symetrie</li>
+<li> Contrairement à l'Égypte, il n'y a pas de monuments funéraires, mais plutôt des sanctuaires et des théatres</li>
+<li> Les colonnes sont tres presentes.</li> 
+<li>   </li>
+<li> 3 styles de colonnes </li>
+<li><em> Ordre dorique </em> </li>
+<li> Les thèmes abordés durant cette période sont : </li>
+<li> les dieux et les heros </li>
+<p> Le thème le plus important de l'art grecque est sans aucuns doutes étroitement lié aux divinités. Par exempls, la seule déesse à pouvoir être représenté nue est Aphrodite.</p>
+<li> Les victoires </li>
+<li> Le corps humain </li>
+<li> La vie quotidienne </li>
+<li> Les emotions </li>
+
+
+
+
+
 
  
 
