--- a/L_art_grece.html
+++ b/L_art_grece.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Dieux grecs — Liste interactive</title>
+<title>L'art de la grèce antique </title>
 <style>
   :root {
     --bg: #f7f2e8;
@@ -324,3 +324,4 @@ Mais Zeus, craignant leur arrogance, priva les hommes du feu. Prométhée, compa
 
 </body>
 </html>
+
